--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
     <link href="css/slider.css" rel="stylesheet">
     <script src="https://use.fontawesome.com/releases/v5.2.0/js/all.js"></script>
     <script src="js/timer.js" defer></script>
-    <script src="js/slider.js" defer></script>
 </head>
 <body>
     <header>
@@ -39,28 +38,15 @@
             </div>
             <article>
                 <div class="rangeslider">
-                    <input type="range" min="1" max="100" value="10" class="slider" id="slider-range">
-                    <p class="time"></p>
+                    <input type="range" min="-100" max="0" value="0" class="range blue" class="range" id="range">
+                </div>
+                <div class="btn">
                     <button class="buttonStart">시작하기</button>
                     <button class="buttonStop none">포기</button>
                 </div>
             </article>
         </section>
     </main>
-
-    <form oninput="output.value = Math.round(range.valueAsNumber / 1000)">
-    <h2>
-      Range slider
-    </h2>
-    <div class="range">
-      <input name="range" type="range" min="0" max="100000">
-      <div class="range-output">
-        <output class="output" name="output" for="range">
-          50
-        </output>
-      </div>
-    </div>
-  </form>
-
+    <footer></footer>
 </body>
 </html>
