remove button text

--- a/practice.html
+++ b/practice.html
@@ -12,7 +12,7 @@
   <!-- 초기값으로 10분에서 시작 -->
   <div class="stop-watch">
     <div class="display">15:00</div>
-    <button class="button">Start</button>
+    <button class="button"></button>
   </div>
 
 
