modified index.html 1. remove footer 2. remove duplicate attribute

--- a/index.html
+++ b/index.html
@@ -31,14 +31,14 @@
                 <img src="img/mainImg03.png" alt="나무 2단계" class="treeImg03">
                 <img src="img/mainImg04.png" alt="나무 3단계" class="treeImg04">
                 <img src="img/mainImg05.png" alt="나무 4단계" class="treeImg05">
-                <img src="img/mainImg06.png" alt="나무 5단계" class="treeImg06s">
+                <img src="img/mainImg06.png" alt="나무 5단계" class="treeImg06">
             </div>
             <div class="stopWatch">
                 <div></div>
             </div>
             <article>
                 <div class="rangeslider">
-                    <input type="range" min="-100" max="0" value="0" class="range blue" class="range" id="range">
+                    <input type="range" min="-100" max="0" value="0" class="range id="range">
                 </div>
                 <div class="btn">
                     <button class="buttonStart">시작하기</button>
@@ -47,6 +47,5 @@
             </article>
         </section>
     </main>
-    <footer></footer>
 </body>
 </html>
