add link in a tag

--- a/index.html
+++ b/index.html
@@ -11,12 +11,13 @@
     <link href="css/normalize.css" rel="stylesheet">
     <link href="css/slider.css" rel="stylesheet">
     <script src="https://use.fontawesome.com/releases/v5.2.0/js/all.js"></script>
+    <script src="js/index.js" defer></script>
 </head>
 
 <body>
     <header>
         <nav id="menu">
-            <span><a href="#"><i class="fas fa-tree"></i> 내 숲으로 가기</a></span>
+            <span><a href="subPage.html"><i class="fas fa-tree"></i> 내 숲으로 가기</a></span>
         </nav>
     </header>
     <main>
@@ -49,7 +50,5 @@
             </article>
         </section>
     </main>
-    <script src="js/index.js" defer></script>
 </body>
-
 </html>
