--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="shortcut icon" href="img/fav.ico">
     <link href="css/style.css" rel="stylesheet">
     <link href="css/normalize.css" rel="stylesheet">
+    <link href="css/reset.css" rel="stylesheet">
     <link href="css/slider.css" rel="stylesheet">
     <script src="https://use.fontawesome.com/releases/v5.2.0/js/all.js"></script>
     <script src="js/index.js" defer></script>
@@ -22,6 +23,7 @@
     </header>
     <main>
         <section class="mainSection">
+            <h1 class="a11y-hiddden">자라나라 나무나무</h1>
             <div class="textImg">
                 <img src="img/titleText01.png" alt="시작해볼까!" class="titleText">
                 <img src="img/titleText02.png" alt="힘내세요, 할 수 있어요!" class="titleText displayNone">
