--- a/index.html
+++ b/index.html
@@ -25,17 +25,10 @@
         <section class="mainSection">
             <h1 class="a11y-hiddden">자라나라 나무나무</h1>
             <div class="textImg">
-                <img src="img/titleText01.png" alt="시작해볼까!" class="titleText">
-                <img src="img/titleText02.png" alt="힘내세요, 할 수 있어요!" class="titleText displayNone">
-                <img src="img/titleText03.png" alt="축하합니다" class="titleText displayNone">
+                <img src="img/titleText01.png" alt="문구" class="titleText">
             </div>
             <div class="imgProject">
-                <img src="img/mainImg01.png" alt="나무 0단계" class="treeImg01">
-                <img src="img/mainImg02.png" alt="나무 1단계" class="treeImg02">
-                <img src="img/mainImg03.png" alt="나무 2단계" class="treeImg03">
-                <img src="img/mainImg04.png" alt="나무 3단계" class="treeImg04">
-                <img src="img/mainImg05.png" alt="나무 4단계" class="treeImg05">
-                <img src="img/mainImg06.png" alt="나무 5단계" class="treeImg06">
+                <img src="img/mainImg01.png" alt="나무 각 단계" class="treeImg">
             </div>
             <div class="stopWatch">
                 <div>00:00</div>
