2019-11-18 implementing js of second page 1. 포기한 썩은 나무 표시기능(V) 2. 그림 순서대로가 아닌 range input을 클릭했을때 그림 바뀌는기능(V) 3. 상황에 따른 titleText.img 변경(V) 4. 화살표 누르면 날짜 변경(V) 5. 누적시간 표시 6. 누적나무, 썩은 나무 표시

--- a/subPage.html
+++ b/subPage.html
@@ -12,6 +12,7 @@
   <script src="https://use.fontawesome.com/releases/v5.2.0/js/all.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0"></script>
   <script src="./js/chart.js" defer></script>
+  <script type="module" src="./js/page2.mjs" defer></script>
 </head>
 <body>
   <header>
@@ -24,8 +25,8 @@
       <div class="outline">
         <span class="a11y-hiddden">개요</span>
       </div>
-      <div class="date">
-        <a href="#"><i class="fas fa-chevron-left"></i></a> <span>2019년 11월</span> <a href="#"><i class="fas fa-chevron-right"></i></a>
+      <div class="dateDiv">
+        <a href="#" class="decreaseButton"><i class="fas fa-chevron-left"></i></a> <span class="date">2019년 11월</span> <a href="#" class="increaseButton"><i class="fas fa-chevron-right"></i></a>
       </div>
     </div>
     <div class="mainContainer">
