--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link href="css/reset.css" rel="stylesheet">
     <link href="css/slider.css" rel="stylesheet">
     <script src="https://use.fontawesome.com/releases/v5.2.0/js/all.js"></script>
-    <script src="js/index.js" defer></script>
+    <script type="module" src="js/index.mjs" defer></script>
 </head>
 
 <body>
