fixed bug first page

--- a/index.html
+++ b/index.html
@@ -3,19 +3,17 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>자라나라 나무나무</title>
     <link rel="shortcut icon" href="img/fav.ico">
     <link href="css/style.css" rel="stylesheet">
-    <link href="css/normalize.css" rel="stylesheet">
-    <link href="css/reset.css" rel="stylesheet">
     <link href="css/slider.css" rel="stylesheet">
     <script src="https://use.fontawesome.com/releases/v5.2.0/js/all.js"></script>
     <script type="module" src="js/index.mjs" defer></script>
 </head>
 
-<body>
+<body class="body">
     <header>
         <nav id="menu">
             <span><a href="subPage.html"><i class="fas fa-tree"></i> 내 숲으로 가기</a></span>
