--- a/index2.html
+++ b/index2.html
@@ -14,7 +14,7 @@
   <script src="js/clockMaker.js" defer></script>
 </head>
 
-<body>
+<body class="body">
   <header>
     <nav id="menu">
       <span><a href="#"><i class="fas fa-tree"></i> 내 숲으로 가기</a></span>
