--- a/subPage.html
+++ b/subPage.html
@@ -12,7 +12,7 @@
   <script src="https://use.fontawesome.com/releases/v5.2.0/js/all.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0"></script>
   <script src="./js/chart.js" defer></script>
-  <script type="module" src="./js/page2.mjs" defer></script>
+  <script type="module" src="./js/page2.js" defer></script>
 </head>
 <body>
   <header>
@@ -71,7 +71,7 @@
         <h2>통계</h2>
         <div class="statistics clearfix">
           <p class="totalTime">TOTAL: 90분</p>
-          <p class="treeNum">성공: <span class="success">0</span> / 실패: <span class="fail">0</span></p>
+          <!-- <span class="treeNum">성공: <span class="success">0</span> / 실패: <span class="fail">0</span></p> -->
         </div>
         <canvas id="myChart" height="40px;"></canvas>
       </section>
