--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,8 @@
     <link href="css/style.css" rel="stylesheet">
     <link href="css/slider.css" rel="stylesheet">
     <script src="https://use.fontawesome.com/releases/v5.2.0/js/all.js"></script>
-    <script type="module" src="js/index.mjs" defer></script>
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+    <script type="module" src="./js/index.mjs" defer></script>
 </head>
 
 <body class="body">
