test markup amendment

--- a/public/index2.html
+++ b/public/index2.html
@@ -8,12 +8,10 @@
   <title>자라나라 나무나무</title>
   <link rel="shortcut icon" href="img/fav.ico">
   <link href="css/style.css" rel="stylesheet">
-  <link href="css/normalize.css" rel="stylesheet">
-  <link href="css/reset.css" rel="stylesheet">
   <link href="css/slider.css" rel="stylesheet">
-  <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
   <script src="https://use.fontawesome.com/releases/v5.2.0/js/all.js"></script>
-  <script type="module" src="js/clockMaker.js" defer></script>
+  <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+  <script type="module" src="./js/clockMaker.js" defer></script>
 </head>
 
 <body class="body">
