--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
     <link href="css/style.css" rel="stylesheet">
     <link href="css/slider.css" rel="stylesheet">
     <script src="https://use.fontawesome.com/releases/v5.2.0/js/all.js"></script>
-    <script src="js/index.mjs" defer></script>
+    <script src="js/indexRefactoring.js" defer></script>
 </head>
 
 <body class="body">
