success server code

--- a/public/index.html
+++ b/public/index.html
@@ -23,6 +23,7 @@
     <main>
         <section class="mainSection">
             <h1 class="a11y-hiddden">자라나라 나무나무</h1>
+            <button width="200px" height="400px" class="bttn">X</button>
             <div class="textImg">
                 <img src="img/titleText01.png" alt="문구" class="titleTextImg">
             </div>
