--- a/public/subPage.html
+++ b/public/subPage.html
@@ -11,6 +11,7 @@
   <link href="css/normalize.css" rel="stylesheet">
   <script src="https://use.fontawesome.com/releases/v5.2.0/js/all.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0"></script>
+  <script src="https://unpkg.com/axios/dist/axios.min.js" defer></script>
   <script src="./js/chart.js" defer></script>
   <script type="module" src="./js/page2.js" defer></script>
 </head>
@@ -73,7 +74,7 @@
           <p class="totalTime">TOTAL: 90분</p>
           <!-- <span class="treeNum">성공: <span class="success">0</span> / 실패: <span class="fail">0</span></p> -->
         </div>
-        <canvas id="myChart" height="40px;"></canvas>
+        <canvas class="myChart" height="40px;"></canvas>
       </section>
     </div>
   </main>
