draw tree Img , chart

--- a/public/subPage.html
+++ b/public/subPage.html
@@ -34,27 +34,27 @@
       <section class="forest">
         <div class="forestContainer">
           <ul class="forestTree">
-            <li><img src="img/tree.png" alt="1일차 나무"></li>
-            <li><img src="img/tree.png" alt="2일차 나무"></li>
-            <li><img src="img/tree.png" alt="3일차 나무"></li>
-            <li><img src="img/tree.png" alt="4일차 나무"></li>
-            <li><img src="img/tree.png" alt="5일차 나무"></li>
-            <li><img src="img/tree.png" alt="6일차 나무"></li>
-            <li><img src="img/tree.png" alt="7일차 나무"></li>
-            <li><img src="img/tree.png" alt="8일차 나무"></li>
-            <li><img src="img/tree.png" alt="9일차 나무"></li>
-            <li><img src="img/tree.png" alt="10일차 나무"></li>
-            <li><img src="img/tree.png" alt="11일차 나무"></li>
-            <li><img src="img/tree.png" alt="12일차 나무"></li>
-            <li><img src="img/tree.png" alt="13일차 나무"></li>
-            <li><img src="img/tree.png" alt="14일차 나무"></li>
-            <li><img src="img/tree.png" alt="15일차 나무"></li>
-            <li><img src="img/tree.png" alt="16일차 나무"></li>
-            <li><img src="img/tree.png" alt="17일차 나무"></li>
-            <li><img src="img/tree.png" alt="18일차 나무"></li>
-            <li><img src="img/tree.png" alt="19일차 나무"></li>
-            <li><img src="img/tree.png" alt="20일차 나무"></li>
-            <li><img src="img/tree.png" alt="21일차 나무"></li>
+            <li><img src="img/treeGray.png" alt="1일차 나무"></li>
+            <li><img src="img/treeGray.png" alt="2일차 나무"></li>
+            <li><img src="img/treeGray.png" alt="3일차 나무"></li>
+            <li><img src="img/treeGray.png" alt="4일차 나무"></li>
+            <li><img src="img/treeGray.png" alt="5일차 나무"></li>
+            <li><img src="img/treeGray.png" alt="6일차 나무"></li>
+            <li><img src="img/treeGray.png" alt="7일차 나무"></li>
+            <li><img src="img/treeGray.png" alt="8일차 나무"></li>
+            <li><img src="img/treeGray.png" alt="9일차 나무"></li>
+            <li><img src="img/treeGray.png" alt="10일차 나무"></li>
+            <li><img src="img/treeGray.png" alt="11일차 나무"></li>
+            <li><img src="img/treeGray.png" alt="12일차 나무"></li>
+            <li><img src="img/treeGray.png" alt="13일차 나무"></li>
+            <li><img src="img/treeGray.png" alt="14일차 나무"></li>
+            <li><img src="img/treeGray.png" alt="15일차 나무"></li>
+            <li><img src="img/treeGray.png" alt="16일차 나무"></li>
+            <li><img src="img/treeGray.png" alt="17일차 나무"></li>
+            <li><img src="img/treeGray.png" alt="18일차 나무"></li>
+            <li><img src="img/treeGray.png" alt="19일차 나무"></li>
+            <li><img src="img/treeGray.png" alt="20일차 나무"></li>
+            <li><img src="img/treeGray.png" alt="21일차 나무"></li>
             <li><img src="img/treeGray.png" alt="22일차 나무"></li>
             <li><img src="img/treeGray.png" alt="23일차 나무"></li>
             <li><img src="img/treeGray.png" alt="24일차 나무"></li>
