--- a/public/index.html
+++ b/public/index.html
@@ -11,13 +11,13 @@
     <link href="css/slider.css" rel="stylesheet">
     <script src="https://use.fontawesome.com/releases/v5.2.0/js/all.js"></script>
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
-    <script src="js/indexRefactoring.js" defer></script>
+    <script src="js/index.js" defer></script>
 </head>
 
 <body class="body">
     <header>
         <nav id="menu">
-            <span><a href="subPage.html"><i class="fas fa-tree"></i> 내 숲으로 가기</a></span>
+            <span><a href="subIndex.html"><i class="fas fa-tree"></i> 내 숲으로 가기</a></span>
         </nav>
     </header>
     <main>
