--- a/public/subIndex.html
+++ b/public/subIndex.html
@@ -12,8 +12,8 @@
   <script src="https://use.fontawesome.com/releases/v5.2.0/js/all.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0"></script>
   <script src="https://unpkg.com/axios/dist/axios.min.js" defer></script>
-  <script src="./js/chart.js" defer></script>
-  <script type="module" src="./js/page2.js" defer></script>
+  <script src="./js/subIndex1.js" defer></script>
+  <script src="./js/subIndex2.js" defer></script>
 </head>
 <body>
   <header>
