--- a/public/index.html
+++ b/public/index.html
@@ -23,12 +23,12 @@
     <main>
         <section class="mainSection">
             <h1 class="a11y-hiddden">자라나라 나무나무</h1>
-            <button width="200px" height="400px" class="bttn">X</button>
+            <button class="dateButton">X</button>
             <div class="textImg">
-                <img src="img/titleText01.png" alt="문구" class="titleTextImg">
+                <img class="titleTextImg" src="img/titleText01.png" alt="문구">
             </div>
             <div class="imgProject">
-                <img src="img/mainImg01.png" alt="나무 각 단계" class="treeImg">
+                <img class="treeImg" src="img/mainImg01.png" alt="나무 각 단계">
             </div>
             <div class="stopWatch">
                 <div>00:00</div>
