--- a/public/subIndex.html
+++ b/public/subIndex.html
@@ -74,7 +74,7 @@
           <p class="totalTime">TOTAL: 90분</p>
           <!-- <span class="treeNum">성공: <span class="success">0</span> / 실패: <span class="fail">0</span></p> -->
         </div>
-        <canvas class="myChart" height="40px;"></canvas>
+        <canvas class="myChart"></canvas>
       </section>
     </div>
   </main>
